--- a/AppMaps/AppMaps.Android/Properties/AndroidManifest.xml
+++ b/AppMaps/AppMaps.Android/Properties/AndroidManifest.xml
@@ -12,7 +12,7 @@
 		android:theme="@style/MainTheme">
 		<meta-data 
 			android:name="com.google.android.geo.API_KEY" 
-			android:value="AIzaSyB2xjdW78CZHenwAMHMmt4CzJGsU2D0O6Y" />
+			android:value="GOOGLE_MAPS_API_KEY" />
 	</application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
